Fix Project page hero image on mobile is too small

--- a/assets/sass/sections/_project.scss
+++ b/assets/sass/sections/_project.scss
@@ -13,15 +13,8 @@
         align-items: center;
     }
 
-    .row {
-        position: absolute;
-        width: 100%;
-        top: 0;
-        height: 75vh;
-
-        .col-sm-5 {
-            background: $main-one;
-        }
+    .row .col-sm-5 {
+        background: $main-one;
     }
 
     .project-title {
@@ -29,21 +22,23 @@
     }
 }
 
-@media (max-width: 576px) {
-    .project-hero-wrapper .project-content-wrapper {
-        padding-top: 40px;
+// Gallery
+.project-images .image {
+    position: relative;
+    overflow: hidden;
+
+    img {
+        width: 100%;
+    }
+
+    &:hover {
+        cursor: pointer;
     }
 }
 
-@media (min-width: 576px) {
-    .project-hero-wrapper .project-content-wrapper {
-        height: 75vh;
-    }
-}
-
-@media (max-width: 560px) {
+@media (max-width: 575px) {
     .project-hero-wrapper {
-        height: 50vh;
+        height: auto;
 
         .project-content-wrapper {
             display: none;
@@ -67,22 +62,21 @@
     }
 }
 
-@media (min-width: 560px) {
-    .project-hero-wrapper .row .project-content {
-        display: none;
-    }
-}
+@media (min-width: 575px) {
+    .project-hero-wrapper {
+        .project-content-wrapper {
+            height: 75vh;
+        }
 
-// Gallery
-.project-images .image {
-    position: relative;
-    overflow: hidden;
+        .row {
+            position: absolute;
+            width: 100%;
+            top: 0;
+            height: 75vh;
 
-    img {
-        width: 100%;
-    }
-
-    &:hover {
-        cursor: pointer;
+            .project-content {
+                display: none;
+            }
+        }
     }
 }
